# CppND-System-Monitor

./: CMakeLists.txt  Makefile
include/: linux_parser.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: testFormat.cpp  testHeader.h  testParser.cpp  testSuite.cpp
test_input/: test_proc_meminfo  test_proc_stat
